# OpenEDA

./: .gitignore  .gitmodules  CMakeLists.txt  License  README.md
docs/: CMakeLists.txt
src/: CMakeLists.txt
src/DREAMPlace/: CMakeLists.txt
src/DREAMPlace/dreamplace/: BasicPlace.py  CMakeLists.txt  EvalMetrics.py  GlobalPlace.py  GlobalPlaceRun.py  NesterovAcceleratedGradientOptimizer.py  NonLinearPlace.py  NonLinearPlace.py.bak  PlaceDB.py  PlaceObj.py  Placer.py  params.json  params.json.bak  run.json  utility_mon.py
src/DREAMPlace/dreamplace/ops/: CMakeLists.txt
src/app/: CMakeLists.txt  app_main.cpp
src/db/: CMakeLists.txt  README.md  db.msg
src/db/core/: README.md  attr_object.h  bus.cpp  bus.h  cell.cpp  cell.h  db.cpp  db.h  db_tcl_command.cpp  db_tcl_command.h  fill.cpp  fill.h  fplan.cpp  fplan.h  group.cpp  group.h  inst.cpp  inst.h  inst_attr.cpp  inst_attr.h  net.cpp  net.h  object.cpp  object.h  object_attr.h  pin.cpp  pin.h  pin_attr.cpp  pin_attr.h  root.cpp  root.h  scan_chain.cpp  scan_chain.h  special_net.cpp  special_net.h  special_wire.cpp  special_wire.h  term.cpp  term.h  timing.cpp  (+5 more)
src/db/io/: read_def.cpp  read_def.h  read_lef.cpp  read_lef.h  read_verilog.cpp  read_verilog.h  read_write_db.cpp  read_write_db.h  write_def.cpp  write_def.h  write_lef.cpp  write_lef.h  write_verilog.cpp  write_verilog.h
src/db/tech/: README.md  cut_layer_rule.cpp  cut_layer_rule.h  export_tech.cpp  export_tech.h  implant_rule.cpp  implant_rule.h  layer.cpp  layer.h  max_via_stack.cpp  max_via_stack.h  ndr_rule.cpp  ndr_rule.h  property.cpp  property.h  routing_layer_rule.cpp  routing_layer_rule.h  site.cpp  site.h  tech.cpp  tech.h  type_def.h  units.cpp  units.h  via_master.cpp  via_master.h  via_rule.cpp  via_rule.h
src/db/timing/sdc/: clock.cpp  clock.h  command_get_set_property.h  create_sdc_commands.cpp  create_sdc_commands.h  environment_commands.cpp  environment_commands.h  general_purpose_commands.cpp  general_purpose_commands.h  multivoltage_power_commands.cpp  multivoltage_power_commands.h  object_access_commands.cpp  object_access_commands.h  parse_sdc_commands.cpp  parse_sdc_commands.h  register_sdc_commands.cpp  register_sdc_commands.h  sdc.cpp  sdc.h  sdc_common.cpp  sdc_common.h  sdc_data.cpp  sdc_data.h  timing_constraints.cpp  timing_constraints.h  timing_exception.h
src/db/timing/spef/: design_parasitics.cpp  design_parasitics.h  net_parasitics.cpp  net_parasitics.h  nets_parasitics.cpp  nets_parasitics.h  parasitic_device.cpp  parasitic_device.h  spef_parser.l  spef_parser.y  spef_reader.cpp  spef_reader.h  spef_tcl_command.cpp  spef_tcl_command.h
src/db/timing/timinglib/: analysis_corner.cpp  analysis_corner.h  analysis_mode.cpp  analysis_mode.h  analysis_view.cpp  analysis_view.h  attr_enum.h  attr_lookup  attr_lookup.cpp  group_enum.h  group_lookup  group_lookup.cpp  libset.cpp  libset.h  timinglib.msg  timinglib_cell.cpp  timinglib_cell.h  timinglib_cellattr.cpp  timinglib_cellattr.h  timinglib_commondef.h  timinglib_function.cpp  timinglib_function.h  timinglib_lib.cpp  timinglib_lib.h  timinglib_libattr.cpp  (+43 more)
src/db/util/: array.h  box.cpp  box.h  geometrys.cpp  geometrys.h  graph.h  hv_tree.cpp  hv_tree.h  property_definition.cpp  property_definition.h  symbol_page.cpp  symbol_page.h  symbol_table.cpp  symbol_table.h  transform.cpp  transform.h  vector_object_var.h
src/geo/: CMakeLists.txt  README.md  box.hpp  geo.h  point.hpp  size.hpp
src/gui/: CMakeLists.txt  README  control_panel_widget.cpp  gui_tcl_command.cpp  gui_tcl_command.h  log_widget.h  tool.qrc  tool_bar.h
src/gui/console/: CMakeLists.txt  config.h  config.tclshrc  init.tcl  tcl_console.h  tclreadline.c  tclreadline.cpp  tclreadline.h  tclreadlineCompleter.tcl  tclreadlineSetup.tcl  tclshrl.c  tclshrl.cpp
src/gui/qtint/: CMakeLists.txt  qt_int.cpp  qt_int.h
src/gui/win/: CMakeLists.txt  control_panel_widget.h  design_broswer_wgt.cpp  design_broswer_wgt.h  elabel.cpp  elabel.h  graphic_scene.cpp  graphic_scene.h  graphic_view.cpp  graphic_view.h  log_widget.cpp  main_window.cpp  main_window.h  panel_tree_model.cpp  panel_tree_model.h  panel_tree_view.cpp  panel_tree_view.h  tool.qrc  tool_bar.cpp  tools.qrc
src/infra/: CMakeLists.txt  command.cpp  command.h  command_manager.cpp  command_manager.h  infra.msg  option.cpp  option.h
src/opt/: CMakeLists.txt  Def.h  IO.cpp  IO.h  Optimize.cpp  Optimize.h  OptimizeNet.cpp  OptimizeNet.h  OptimizeNets.cpp  OptimizeNets.h  README.md  Van.cpp  Van.h  io.cpp  io.h  io_db.cpp  io_db.h  io_file.cpp  io_file.h  opt_tcl_command.cpp  opt_tcl_command.h  optimize.h  optimize_net.cpp  optimize_net.h  optimize_nets.cpp  optimize_nets.h  segmentation.cpp  segmentation.h  van.cpp  van.h
src/parser/: CMakeLists.txt  README.md
src/parser/def/: CMakeLists.txt
src/parser/graphviz/: graphviz_writer.cpp  graphviz_writer.h
src/parser/lef/: CMakeLists.txt
src/parser/verilog/: CMakeLists.txt  README
src/python/: CMakeLists.txt  README.md  cell.cpp  db.cpp  db.h  design.cpp  geo.cpp  geo.h  pybind.cpp  util.cpp  util.h
src/tcl/: CMakeLists.txt  README.md  test_app.cpp  test_app.h  test_inst_master.cpp  test_ndr_rule.cpp  test_object_tcl_cmd.cpp  test_object_tcl_cmd.h  test_property_definition.cpp  test_site.cpp  test_transform.cpp  test_units.cpp  test_vector_object.cpp  test_vector_object_perf.cpp
src/util/: CMakeLists.txt  README.md  checksum.cpp  checksum.h  compress.cpp  compress.h  data_traits.h  decompress.cpp  decompress.h  enums.h  io_handler.cpp  io_handler.h  io_manager.cpp  io_manager.h  map_reduce.cpp  map_reduce.h  message.cpp  message.h  monitor.cpp  monitor.h  namespace.h  point.cpp  point.h  polygon_table.cpp  polygon_table.h  stream.h  util.cpp  util.h  util.msg  util_mem.cpp  util_mem.h  util_tcl.cpp  util_tcl.h  version.cpp  version.h
unittest/db/: CMakeLists.txt  database.cpp  main.cpp  object.cpp
unittest/geo/: CMakeLists.txt
unittest/python/: CMakeLists.txt  unittest_bef.txt  unittest_db.py  unittest_flatten.txt  unittest_geo.py  unittest_util.py
unittest/util/: CMakeLists.txt  hv_tree.cpp
(+250 files in other folders)
