if(DOXYGEN_FOUND)

set(DOXYGEN_GENERATE_HTML YES)
set(DOXYGEN_GENERATE_MAN NO)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${PROJECT_SOURCE_DIR}/README.md)
#set(DOXYGEN_ALIASES nowarn="\\{" endnowarn="\\}")
set(DOXYGEN_SOURCE_BROWSER YES)
set(DOXYGEN_GENERATE_TREEVIEW YES)

doxygen_add_docs(docs
    ${PROJECT_SOURCE_DIR}/README.md
    ${PROJECT_SOURCE_DIR}/src 
    ${PROJECT_SOURCE_DIR}/unittest
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    COMMENT "Generating API documentation with Doxygen"
  )

install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION docs OPTIONAL)

endif(DOXYGEN_FOUND)
