# add_subdirectory(frontends)
# add_subdirectory(kernel)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_YOSYS_ -DYOSYS_ENABLE_ZLIB")
set (CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -D_YOSYS_ -DYOSYS_ENABLE_ZLIB")
set (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -D_YOSYS_ -DYOSYS_ENABLE_ZLIB")
set (CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -D_YOSYS_ -DYOSYS_ENABLE_ZLIB")
set (CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -D_YOSYS_ -DYOSYS_ENABLE_ZLIB")


set(_SUBDIRNAME verilog)
set(_SUBLIBNAME ${PROJECT_NAME_LOWERCASE}_${_SUBDIRNAME})
set(_SUBBINNAME "")

FLEX_TARGET(VERILOG_PARSER_LEXER
    ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/verilog_lexer.l
    ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/verilog_lexer.cc)
BISON_TARGET(VERILOG_PARSER_YACC
    ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/verilog_parser.y
    ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/${_SUBDIRNAME}.tab.cpp)
ADD_FLEX_BISON_DEPENDENCY(VERILOG_PARSER_LEXER VERILOG_PARSER_YACC)

file(GLOB_RECURSE SRCS *.cc *.cpp)

add_library(${_SUBLIBNAME} STATIC ${SRCS} ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/verilog_lexer.cc ${CMAKE_CURRENT_SOURCE_DIR}/frontends/verilog/${_SUBDIRNAME}.tab.cpp)
# ADD_DEPENDENCIES(${_SUBLIBNAME} VERILOG_PARSER_LEXER VERILOG_PARSER_YACC)

target_include_directories(${_SUBLIBNAME}
    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../..
    )

# must turn fPIC on 
set_target_properties(${_SUBLIBNAME} PROPERTIES POSITION_INDEPENDENT_CODE TRUE)

install(TARGETS ${_SUBLIBNAME} 
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib/static
  )

# install headers 
file(GLOB_RECURSE HEADERS1 frontends/*.h frontends/*.hpp)
install(FILES ${HEADERS1} DESTINATION include/src/parser/${_SUBDIRNAME}/frontends)
file(GLOB_RECURSE HEADERS2 kernel/*.h kernel/*.hpp)
install(FILES ${HEADERS2} DESTINATION include/src/parser/${_SUBDIRNAME}/kernel)
file(GLOB_RECURSE HEADERS3 libs/*.h libs/*.hpp)
install(FILES ${HEADERS3} DESTINATION include/src/parser/${_SUBDIRNAME}/libs)

unset(_SUBDIRNAME)
unset(_SUBLIBNAME)
unset(_SUBBINNAME)
